--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TEST</title>
+    <title>TEST2</title>
   </head>
   <body>
     <h1>QUE PEDO</h1>
