--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TEST2</title>
+    <title>TEST</title>
   </head>
   <body>
-    <h1>QUE PEDO</h1>
+    <h1>QUE PEDO PINCHE GENTE</h1>
   </body>
 </html><h1>test</h1>
